fix bug in jump_to in the video player controls

--- a/projects/imc/frontend/app/catalog/components/search-timeline/search-timeline.component.css
+++ b/projects/imc/frontend/app/catalog/components/search-timeline/search-timeline.component.css
@@ -79,7 +79,7 @@
   border: 1px solid #c0c0c0;
   background: #ffffff;
   border-radius: 2px;
-  padding: 10px;
+  padding: 10px 5px;
   -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
   box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
 }
